[metadata]
name = openstack-governance-website
version = 2016.1
summary = OpenStack Governance
description-file =
    README.rst
author = OpenStack Foundation
author-email = openstack@lists.openstack.org
home-page = http://www.openstack.org/

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
